Bug 93351 - output is not XML compliant
Summary: output is not XML compliant
Status: RESOLVED FIXED
Alias: None
Product: kimagemapeditor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Schaefer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-11-16 10:47 UTC by Jan Schaefer
Modified: 2004-11-16 11:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Schaefer 2004-11-16 10:47:27 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

The generated HTML output is not XML compliant, because the area tags are not ended with />
Comment 1 Jan Schaefer 2004-11-16 11:18:37 UTC
CVS commit by schafer: 

Fixed bug 93351: output is not XML compliant 

BUG: 93351


  M +5 -5      kimearea.cpp   1.6


--- kdewebdev/kimagemapeditor/kimearea.cpp  #1.5:1.6
@@ -3,5 +3,5 @@
                              -------------------
     begin                : Thu Jun 14 2001
-    copyright            : (C) 2001 by Jan Sch