Fixed bug 93351: output is not XML compliant

BUG: 93351

svn path=/trunk/kdewebdev/kimagemapeditor/; revision=363350